--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,91 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.navbar {
+  width: 100%;
+  height: 30px;
+  background-color: #128c7e;
+  display: flex;
+}
+.new-app {
+  background-color: blue;
+}
+.App {
+  font-family: sans-serif;
+  text-align: center;
+  background-color: yellow;
+}
+
+.hero {
+  padding: 20px;
+  background-color: lightskyblue;
+  height: 70vh;
+  text-align: center;
+}
+
+.footer {
+  background-color: lightseagreen;
+  padding: 20px;
+  text-align: center;
+}
+
+header {
+  background-color: orange;
+  padding: 20px;
+  justify-content: space-between;
+}
+
+header .logo {
+  font-size: 18px;
+  background: black;
+  color: white;
+  padding: 6px 12px;
+  border-radius: 5px;
+}
+
+header .nav a {
+  color: black;
+  display: block;
+  margin: 0 5px;
+}
+.parent {
+  display: flex;
+  border: 1px solid black;
+  text-align: center;
+  width: 100%;
+  padding: 0%;
+}
+.left {
+  border: 0.2px solid red;
+  vertical-align: middle;
+  width: 30%;
+  height: 100vh;
+}
+
+.right {
+  vertical-align: middle;
+  width: 70%;
+  height: 100vh;
+}
+.searchbox {
+  width: 100%;
+  background-color: cyan;
+}
+
+.cards {
+  width: 100%;
+  background-color: indigo;
+}
+
+.messages {
+  width: 100%;
+  height: 90%;
+  background-color: lavender;
+}
