--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,6 @@ code {
 .hero {
   padding: 20px;
   background-color: lightskyblue;
-  height: 70vh;
   text-align: center;
 }
 
@@ -44,6 +43,7 @@ code {
   background-color: lightseagreen;
   padding: 20px;
   text-align: center;
+
 }
 
 header {
@@ -73,7 +73,6 @@ header .nav a {
   padding: 0%;
 }
 .left {
-  border: 0.2px solid red;
   vertical-align: middle;
   width: 30%;
   height: 100vh;
@@ -96,6 +95,6 @@ header .nav a {
 
 .messages {
   width: 100%;
-  height: 90%;
+  height: calc(100vh - 91px);
   background-color: lavender;
 }
