--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
 }
 .navbar {
   width: 100%;
-  height: 30px;
+  height: 55px;
   background-color: #128c7e;
   display: flex;
 }
@@ -97,4 +97,32 @@ header .nav a {
   width: 100%;
   height: calc(100vh - 91px);
   background-color: lavender;
+}
+
+.aws-image{
+  width: 40px;
+  height: 45px;
+  margin: 0 auto;
+  margin: 0 0 0 -20%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+
+}
+
+.aws-image1{
+  width: 40px;
+  height: 45px;
+  margin: 15;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+}
+
+.right-section{
+  display: flex;
 }
